--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -19,10 +19,11 @@ body {
   left: 0;
   width: 100%;
   height: 60px;
-  background: #d86f34;
+  background: #3f50e2;
   box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.25);
   display: flex;
   align-items: center;
+  z-index: 999;
 }
 .top_navbar img {
   margin-left: 37px;
@@ -62,7 +63,7 @@ body {
   width: 30px;
   height: 30px;
   background-color: #fff;
-  color: #d86f34;
+  color: #3f50e2;
   border-radius: 50%;
   text-align: center;
 }
@@ -127,7 +128,7 @@ div .sidebar_inner {
 
 .sidebar .side-menu {
   padding: 15px 0 12px 25px;
-  color: #d86f34;
+  color: #3f50e2;
   transition: all 0.2s ease;
   height: 60px;
 
@@ -135,7 +136,7 @@ div .sidebar_inner {
 }
 .sidebar .arrow-inner {
   padding: 17px 0 12px 14px;
-  color: #d86f34;
+  color: #3f50e2;
   transition: all 0.2s ease;
   height: 60px;
 
@@ -144,7 +145,7 @@ div .sidebar_inner {
 }
 a {
   text-decoration: none;
-  color: #ffaa7b;
+  color: #7982da;
 }
 .sidebar a .icon {
   font-size: 25px;
@@ -161,12 +162,15 @@ a {
 .logout {
   margin-top: 230px;
 }
+.logout-dosen {
+  margin-top: 310px;
+}
 
 .side-menu:hover {
-  background: #ffaa7b;
+  background: #7982da;
   color: #fff;
 }
-.side-menu a:hover {
+.side-menu:hover a {
   color: #fff;
 }
 
@@ -177,15 +181,13 @@ a {
 
 .main_container {
   margin-top: 60px;
-  margin-left: 70px;
-  padding: 25px;
-  width: calc(100% - 70px);
+  margin-left: 100px;
+  width: calc(100% - 100px);
 }
 
 .main_container .content {
   background: #fff;
-  padding: 25px;
-  margin-bottom: 25px;
+  padding: 20px 5px;
   text-align: justify;
 }
 
