--- a/frontend/css/addrps.css
+++ b/frontend/css/addrps.css
@@ -203,7 +203,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   margin-left: 15px;
-  margin-top: 40px;
+  margin-top: 60px;
   font-family: "Krona One";
   font-size: 16px;
   color: #fff;
@@ -237,4 +237,7 @@ button:hover {
 
 .button100-form-btn:hover:before {
   opacity: 1;
+}
+.input {
+  margin-top: 0;
 }
