--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Drop Down Sidebar Menu | CodingLab </title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <!-- Boxiocns CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -13,7 +13,7 @@
 <body>
   <div class="sidebar close">
     <div class="logo-details">
-      <img src="image/burger_small.png" alt="">
+      <a href="#"><img src="image/burger_small.png" alt=""></a>
       <span class="logo_name">Portal</span>
     </div>
     <ul class="nav-links">
