--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
           <h4 class="txt1">Email</h4>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Username is required">
-          <input class="input100" type="text" name="email" />
+          <input class="input100" type="text" name="email"/>
           <span class="focus-input100"></span>
           <div class="email error"></div>
         </div>
@@ -18,7 +18,7 @@
           <h4 class="txt1">Password</h4>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Password is required">
-          <input class="input100" type="password" name="password" />
+          <input class="input100" type="password" name="password"/>
           <span class="focus-input100"></span>
           <div class="password error"></div>
         </div>
@@ -61,10 +61,12 @@
         emailError.textContent = data.errors.email;
         passwordError.textContent = data.errors.password;
       }
-      if (data.user) {
+      if(data.user.type == "M") {
         location.assign('/');
+        console.log(data.user);
+      }else{
+        location.assign('/admin')
       }
-
     }
     catch (err) {
       console.log(err);
