--- a/views/mahasiswa.ejs
+++ b/views/mahasiswa.ejs
@@ -7,14 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    ini halaman admin
-
-        <!-- <% data.forEach((row) => { %>
-        <tr>
-            <td> <%= row.name %> </td>
-        </tr>
-        <% }) %> -->
-    
-    <a href="/logout">logout</a>
+    ini mahasiswa
 </body>
 </html>
