--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -42,7 +42,7 @@
         passwordError.textContent = data.errors.password;
       }
       if (data.user) {
-        location.assign('/');
+        location.assign('/login');
       }
 
     }
