--- a/public/css/style-dosen.css
+++ b/public/css/style-dosen.css
@@ -1,79 +1,91 @@
 /* Google Fonts Import Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.sidebar{
+.sidebar {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
-  background: #F0F0F0;
+  background: #f0f0f0;
   width: 230px;
   z-index: 2;
   transition: all 0.5s ease;
 }
-.sidebar.close{
+.sidebar.close {
   width: 78px;
 }
 
-.navbar.logo-details .bx-menu{
+.navbar.logo-details .bx-menu {
   cursor: pointer;
   margin-top: 40px;
 }
 
-#logo-image{
+#logo-image {
   margin-left: 20px;
   margin-bottom: 2px;
 }
 
-.navbar .nav-item .logo_name{
+.navbar .nav-item .logo_name {
   font-size: 22px;
-  color: #55B8FF;
+  color: #55b8ff;
   font-weight: 600;
   transition: 0.3s ease;
   transition-delay: 0.1s;
   margin-left: 7px;
 }
-
-.navbar-brand{
+div .navbar-brand {
+  font-size: 20px;
+  color: #747b75;
+  font-style: normal;
+  font-weight: 700;
+}
+nav .navbar-brand {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 23px;
   margin-left: 20px;
+  color: #174464;
   display: inline-block;
 }
-
-.sidebar.close .logo-details .logo_name{
+div .navbar {
+  background-color: #fff;
+}
+.sidebar.close .logo-details .logo_name {
   transition-delay: 0s;
   opacity: 0;
   pointer-events: none;
 }
-.sidebar .nav-links{
+.sidebar .nav-links {
   height: 100%;
   padding: 100px 0 150px 0;
   overflow: auto;
 }
-.sidebar.close .nav-links{
+.sidebar.close .nav-links {
   overflow: visible;
 }
-.sidebar .nav-links::-webkit-scrollbar{
+.sidebar .nav-links::-webkit-scrollbar {
   display: none;
 }
-.sidebar .nav-links li{
+.sidebar .nav-links li {
   position: relative;
   list-style: none;
   transition: all 0.4s ease;
   /* background: #F0F0F0; */
   padding-top: 5px;
 }
-.sidebar .nav-links li a:hover{
-  background-color: #55B8FF;
+.sidebar .nav-links li a:hover {
+  background-color: #55b8ff;
   color: #fff;
 }
 
-.sidebar .nav-links li i{
+.sidebar .nav-links li i {
   height: 50px;
   min-width: 78px;
   text-align: center;
@@ -87,34 +99,34 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #55B8FF;
+  color: #55b8ff;
 }
 
-.sidebar .nav-links li .logout a{
-  color: #55B8FF;
+.sidebar .nav-links li .logout a {
+  color: #55b8ff;
 }
 
-.sidebar .nav-links li a .link_name{
+.sidebar .nav-links li a .link_name {
   font-size: 18px;
   font-weight: 400;
   transition: all 0.4s ease;
 }
-.sidebar.close .nav-links li a .link_name{
+.sidebar.close .nav-links li a .link_name {
   opacity: 0;
   pointer-events: none;
 }
 
-.sidebar .nav-links li .sub-menu{
+.sidebar .nav-links li .sub-menu {
   padding: 6px 6px 14px 80px;
   margin-top: -10px;
-  background: #F0F0F0;
+  background: #f0f0f0;
   display: none;
 }
 
-.sidebar .nav-links li.showMenu .sub-menu{
+.sidebar .nav-links li.showMenu .sub-menu {
   display: block;
 }
-.sidebar .nav-links li .sub-menu a{
+.sidebar .nav-links li .sub-menu a {
   font-size: 15px;
   padding: 5px 0;
   white-space: nowrap;
@@ -122,18 +134,18 @@
   transition: all 0.3s ease;
 }
 
-.sidebar .nav-links li .sub-menu:hover{
-  background-color: #55B8FF;
-  color: #F0F0F0;
+.sidebar .nav-links li .sub-menu:hover {
+  background-color: #55b8ff;
+  color: #f0f0f0;
 }
 
-.sidebar .nav-links li .sub-menu a:hover{
+.sidebar .nav-links li .sub-menu a:hover {
   opacity: 1;
 }
-.sidebar.close .nav-links li .sub-menu{
+.sidebar.close .nav-links li .sub-menu {
   position: absolute;
   left: 100%;
-  color: #55B8FF;
+  color: #55b8ff;
   top: -10px;
   margin-top: 0;
   padding: 10px 20px;
@@ -144,16 +156,16 @@
   transition: 0s;
   height: 50px;
 }
-.sidebar.close .nav-links li:hover .sub-menu{
+.sidebar.close .nav-links li:hover .sub-menu {
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
 }
-.sidebar .nav-links li .sub-menu .link_name{
+.sidebar .nav-links li .sub-menu .link_name {
   display: none;
   margin-top: 12px;
 }
-.sidebar.close .nav-links li .sub-menu .link_name{
+.sidebar.close .nav-links li .sub-menu .link_name {
   font-size: 18px;
   opacity: 1;
   display: block;
@@ -169,13 +181,13 @@
   padding: 3px 10px;
   pointer-events: none;
   display: absolute;
-  top:0;
+  top: 0;
 }
-.sidebar .nav-links li:hover .sub-menu.blank{
+.sidebar .nav-links li:hover .sub-menu.blank {
   top: 50%;
   transform: translateY(-50%);
 }
-.sidebar .profile-details{
+.sidebar .profile-details {
   position: fixed;
   bottom: 0;
   width: 260px;
@@ -185,17 +197,17 @@
   padding: 12px 0;
   transition: all 0.5s ease;
 }
-.sidebar.close .profile-details{
+.sidebar.close .profile-details {
   background: none;
 }
-.sidebar.close .profile-details{
+.sidebar.close .profile-details {
   width: 78px;
 }
-.sidebar .profile-details .profile-content{
+.sidebar .profile-details .profile-content {
   display: flex;
   align-items: center;
 }
-.sidebar .profile-details img{
+.sidebar .profile-details img {
   height: 52px;
   width: 52px;
   object-fit: cover;
@@ -204,11 +216,11 @@
   background: #1d1b31;
   transition: all 0.5s ease;
 }
-.sidebar.close .profile-details img{
+.sidebar.close .profile-details img {
   padding: 10px;
 }
 .sidebar .profile-details .profile_name,
-.sidebar .profile-details .job{
+.sidebar .profile-details .job {
   color: #fff;
   font-size: 18px;
   font-weight: 500;
@@ -216,13 +228,13 @@
 }
 .sidebar.close .profile-details i,
 .sidebar.close .profile-details .profile_name,
-.sidebar.close .profile-details .job{
+.sidebar.close .profile-details .job {
   display: none;
 }
-.sidebar .profile-details .job{
+.sidebar .profile-details .job {
   font-size: 12px;
 }
-.home-section{
+.home-section {
   position: relative;
   background-color: #fff;
   min-height: 100vh;
@@ -231,97 +243,96 @@
   transition: all 0.5s ease;
   padding: 12px;
 }
-.sidebar.close ~ .home-section{
+.sidebar.close ~ .home-section {
   left: 78px;
   width: calc(100% - 78px);
 }
-.home-content{
+.home-content {
   display: flex;
   flex-wrap: wrap;
 }
 .home-section .home-content .bx-menu,
-.home-section .home-content .text{
+.home-section .home-content .text {
   color: #11101d;
   font-size: 35px;
 }
-.home-section .home-content .bx-menu{
+.home-section .home-content .bx-menu {
   cursor: pointer;
   margin-right: 10px;
 }
-.home-section .home-content .text{
+.home-section .home-content .text {
   font-size: 26px;
   font-weight: 600;
 }
 
-img{
+img {
   padding-bottom: 4px;
 }
 
-.main{
+.main {
   margin: 40px;
 }
 
-.navbar{
-  background-color: #F0F0F0;
+.navbar {
+  background-color: #f0f0f0;
 }
 
-.navbar-brand .logo-details{
+.navbar-brand .logo-details {
   margin-right: 20px;
   margin-bottom: 30px;
 }
 
-#user{
-  color: #55B8FF;
+#user {
+  color: #55b8ff;
   margin-left: 25px;
   cursor: pointer;
 }
 
-.welcome{
+.welcome {
   margin-top: 7px;
-  color: #55B8FF;
+  color: #55b8ff;
 }
 
-#container{
+#container {
   margin-top: 100px;
   margin-left: 90px;
 }
 
-.bg-light:hover{
-  background-color: #F0F0F0;
-  color: #55B8FF;
+.bg-light:hover {
+  background-color: #f0f0f0;
+  color: #55b8ff;
 }
 
-.jumbotron{
+.jumbotron {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background-color:  #D5EDFF;
+  background-color: #d5edff;
   min-height: 500px;
   min-width: 1000px;
-  box-shadow: 5px 5px 5px #55B8FF;
+  box-shadow: 5px 5px 5px #55b8ff;
 }
 
-#rps{
-  background-color:#D5EDFF;
+#rps {
+  background-color: #d5edff;
 }
 
-
-.main .jumbotron .btn-primary{
+.main .jumbotron .btn-primary {
   display: block;
   justify-content: end;
 }
 
-
-.logout{
+.logout {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 
-.detail-rps {
+div .detail-rps {
   justify-content: space-between;
   width: 100%;
+  background-color: #fff;
 }
 .rps {
   background-color: #c6caf3;
@@ -341,34 +352,31 @@ h4 {
   color: #111546;
 }
 
-
-
 .tampil-rps {
   font-family: "lucida Sans Unicode", "Lucida Grande", "Segoe UI", vardana;
   margin-top: 80px;
-
 }
 .rps-tabel {
   border-collapse: collapse;
   font-size: 13px;
   width: 100%;
   border-style: solid;
-  
 }
-table{
+table {
   border: #000;
 }
-.rps-tabel thead, .rps-tabel td{
+.rps-tabel thead,
+.rps-tabel td {
   border: #000;
   border-width: 1;
 }
-.rps-tabel tr{
+.rps-tabel tr {
   border-width: 1;
 }
 tr {
   border-width: 1;
 }
-.rps-tabel thead th, 
+.rps-tabel thead th,
 .rps-tabel td {
   padding: 7px 17px;
 }
@@ -446,7 +454,7 @@ tr {
 .rps-tabel tbody tr:hover td {
   background-color: #ffffa2;
   border-color: #ffff0f;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 /* Table Footer */
@@ -507,7 +515,6 @@ input {
   [ Input ]*/
 .input {
   justify-content: space-between;
-  
 }
 .wrap-input100 {
   position: relative;
@@ -517,7 +524,7 @@ input {
   font-size: 10px;
   height: 70px;
   padding: 0 20px;
-  background-color: #D5EDFF;
+  background-color: #d5edff;
   border: 1px solid #ded2d9;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -702,28 +709,142 @@ button:hover {
   margin-top: 0;
 }
 
-@media screen and (max-width: 400px){
-  .sidebar{
+@media screen and (max-width: 400px) {
+  .sidebar {
     width: 240px;
   }
-  .sidebar.close{
+  .sidebar.close {
     width: 78px;
   }
-  .sidebar .profile-details{
+  .sidebar .profile-details {
     width: 240px;
   }
-  .sidebar.close .profile-details{
+  .sidebar.close .profile-details {
     background: none;
   }
-  .sidebar.close .profile-details{
+  .sidebar.close .profile-details {
     width: 78px;
   }
-  .home-section{
+  .home-section {
     left: 240px;
     width: calc(100% - 240px);
   }
-  .sidebar.close ~ .home-section{
+  .sidebar.close ~ .home-section {
     left: 78px;
     width: calc(100% - 78px);
   }
+}
+
+/*===============Tabel========================*/
+div .table-wrap {
+  border-collapse: collapse;
+  margin-top: 20px;
+  overflow-x: auto;
+}
+.table-wrap .table {
+  width: 100%;
+  -webkit-box-shadow: 0 5px 12px -12px rgb(0 0 0 / 29%);
+  -moz-box-shadow: 0 5px 12px -12px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 10%);
+  padding: 20px;
+  margin: 10px auto;
+}
+.table-wrap .table tbody tr {
+  margin-bottom: 10px;
+  border-bottom: 4px solid #f8f9fd;
+}
+
+.table-wrap .table thead th,
+.table-wrap .table tbody td {
+  border: none;
+  padding: 18px;
+  font-size: 14px;
+  vertical-align: middle;
+  font-family: "Montserrat";
+}
+.editb {
+  font-size: 25px;
+  display: inline-block;
+  text-align: center;
+  margin-right: 10px;
+}
+th {
+  text-align: center;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  padding: 20px;
+}
+.table tr:nth-child(even) {
+  background-color: #f7f6fe;
+}
+.func {
+  justify-content: space-between;
+}
+
+.add1 {
+  gap: 8px;
+  text-decoration: none;
+  border: none;
+  color: #fff;
+  background: #55b8ff;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1;
+  padding: 10px 30px;
+}
+.add1 a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.add1 a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+.add1 i {
+  margin-right: 0px;
+}
+.add {
+  padding: 12px 30px;
+  text-align: center;
+  gap: 8px;
+  text-decoration: none;
+  border: none;
+  color: #fff;
+  background: #624de3;
+  border-radius: 18px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1;
+}
+.add i {
+  margin-right: 10px;
+}
+.add a {
+  text-decoration: none;
+  color: #fff;
+}
+.add {
+  display: flex;
+  justify-content: end;
+}
+button i {
+  margin-right: 8px;
+  font-weight: 700;
+}
+button:hover {
+  text-decoration: none;
+  background-color: #1b669d;
+  transition: ease-in 0.2s;
+}
+.thead {
+  background: rgba(244, 247, 252, 0.75);
+  backdrop-filter: blur(8px);
 }
