--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -11,7 +11,9 @@
        <% } else {%>
        /css/style-mahasiswa.css
        <% } %> ">
+    
     <!-- Boxiocns CDN Link -->
+    <link rel="stylesheet" href="/public/css/table.css">
     <link href="/vendor/sweetalert2.all.min.css"></link>
     <script src="/vendor/sweetalert2.all.min.js"></script>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
