--- a/views/dosen/add_rps.ejs
+++ b/views/dosen/add_rps.ejs
@@ -1,64 +1,73 @@
 <%- include('../partials/sidebar'); -%>
 
+<div id="container">
+  <div class="content">
+    <form id="form" class="login100-form validate-form flex-sb flex-w" action="/dosen/add-course" method="post">
+      <div class="row input">
+        <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">id Kurikulum</h5>
+          <input class="input100" type="number" name="curriculum_id" placeholder="pilih id kurikulum" />
+          <span class="focus-input100"></span>
+        </div>
+        <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">Kode Matkul</h5>
+          <input class="input100" type="text" name="code" />
+          <span class="focus-input100"></span>
+        </div>
+        <div class="col-sm-5 wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">Nama Alias</h5>
+          <input class="input100" type="text" name="alias" />
+          <span class="focus-input100"></span>
+        </div>
+      </div>
+      <div class="row input">
+        <div class="col-sm-5 wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">Mata Kuliah</h5>
+          <input class="input100" type="text" name="name" />
+          <span class="focus-input100"></span>
+        </div>
+        <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">Sks</h5>
+          <input class="input100" type="number" name="credit" />
+          <span class="focus-input100"></span>
+        </div>
+        <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">Semester</h5>
+          <input class="input100" type="number" name="semester" />
+          <span class="focus-input100"></span>
+        </div>
+      </div>
+      <div class="row input">
+        <div class="wrap-input100 validate-input" data-validate="Password is required">
+          <h5 class="txt1">Deskripsi</h5>
+          <input class="input100" type="text" name="description" />
+          <span class="focus-input100"></span>
+        </div>
+      </div>
 
-    <div id="container">
-      <div class="content">
-        <form id="form" class="login100-form validate-form flex-sb flex-w" action="/dosen/add-course" method="post">
-          <div class="row input">
-              <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
-                <h5 class="txt1">id Kurikulum</h5>
-                <input class="input100" type="number" name="curriculum_id" placeholder="pilih id kurikulum"/>
-                <span class="focus-input100"></span>
-              </div>
-              <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
-                <h5 class="txt1">Kode Matkul</h5>
-                <input class="input100" type="text" name="code" />
-                <span class="focus-input100"></span>
-              </div>
-            <div class="col-sm-5 wrap-input100 validate-input" data-validate="Password is required">
-              <h5 class="txt1">Nama Alias</h5>
-              <input class="input100" type="text" name="alias" />
-              <span class="focus-input100"></span>
-            </div>
-          </div>
-          <div class="row input">
-            <div class="col-sm-5 wrap-input100 validate-input" data-validate="Password is required">
-              <h5 class="txt1">Mata Kuliah</h5>
-              <input class="input100" type="text" name="name" />
-              <span class="focus-input100"></span>
-            </div>
-            <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
-              <h5 class="txt1">Sks</h5>
-              <input class="input100" type="number" name="credit" />
-              <span class="focus-input100"></span>
-            </div>
-            <div class="col-sm-3 wrap-input100 validate-input" data-validate="Password is required">
-              <h5 class="txt1">Semester</h5>
-              <input class="input100" type="number" name="semester" />
-              <span class="focus-input100"></span>
-            </div>
-          </div>
-          <div class="row input">
-            <div class="wrap-input100 validate-input " data-validate="Password is required">
-              <h5 class="txt1">Deskripsi</h5>
-              <input class="input100" type="text" name="description" />
-              <span class="focus-input100"></span>
-            </div>
-          </div>
-
-          
-          <!-- <div class="wrap-input100 validate-input" data-validate="text is required">
+      <!-- <div class="wrap-input100 validate-input" data-validate="text is required">
             <h5 class="txt1">Materi</h5>
             <input class="input100" type="text" name="pass"/>
             <span class="focus-input100"></span>
           </div> -->
 
-          <div class="container-button100-form-btn m-t-30">
-            <button class="button100-form-btn" type="submit" onclick="success()">Tambahkan</button>
-            <button class="button100-form-btn" ><a href="/dosen/courses" class="nav-link">Back</a></button>
-          </div>
-        </form>
+      <div class="container-button100-form-btn m-t-30">
+        <button class="button100-form-btn" type="submit" onclick="success()">TAMBAH</button>
+        <button class="button100-form-btn"><a href="/dosen/courses" class="nav-link">KEMBALI</a></button>
       </div>
-    </div>
-    
+    </form>
+  </div>
+</div>
+<script>
+  function success() {
+    Swal.fire("Good job!", "Data saved", "success")
+      .then(function () {
+        // document.getElementById('form').submit();
+        window.setTimeout(function () {
+          window.location = "/dosen/courses";
+        }, 700);
+      })
+      .catch((error) => console.log(error));
+  }
+</script>
 <%- include('../partials/footer'); -%>
