--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -3,15 +3,34 @@
         <div id="container">
           <div class="content">
             <div class="row detail-rps">
-              <div class="col-sm-12 rps">
-                <h3>PEMROGRAMAN WEB</h3>
-                <h4>1. CPMK</h4>
-                <h4>2. Referensi Mata Kuliah (Pustaka)</h4>
-                <h4>3. Komponen Penilaian</h4>
-                <h4>4. Pertemuan Mingguan</h4>
-              </div>
+                <% items.forEach((item) => { %>
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div>
+                        <h1 class="navbar-brand"><%= item.name %></h1>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="/dosen/coursesPlan/<%= item.id %>/CPMK">CPMK</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Referensi</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Penilaian</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pertemuan</a>
+                          </li>
+                      </ul>
+                    </div>
+                  </nav>
             </div>
-            <% items.forEach((item) => { %>
+            
             <div class="tampil-rps">
                 
                 <table class="rps-tabel">
