--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -15,13 +15,13 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarText">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="/dosen/coursesPlan/<%= item.id %>/CPMK">CPMK</a>
+                          <a class="nav-link" href="/dosen/coursesPlan/<%= item.id %>/CPMK">CPMK  /</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Referensi</a>
+                          <a class="nav-link" href="#">Referensi  /</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Penilaian</a>
+                          <a class="nav-link" href="#">Penilaian  /</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pertemuan</a>
