--- a/views/dosen/courses.ejs
+++ b/views/dosen/courses.ejs
@@ -1,24 +1,33 @@
+<%- include('../partials/sidebar'); -%>
 
-  <%- include('../partials/sidebar'); -%>
-
-    <div id="container">
-      <a href="/dosen/add-course">Tambah RPS</a>
-      <div class="row hidden-md-up">
-        <% items.forEach((item) => { %>
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <img src="/images/frame.png" class="card-img-top" alt="...">
-              <h4 class="card-title"><%= item.name %></h4>
-              <h6 class="card-subtitle text-muted">Semester <%= item.semester %></h6>
-              <a href="/dosen/coursesPlan/<%= item.id %>" class="card-link">Lihat</a>
-              <a href="#" class="card-link">detail</a>
-            </div>
+<div id="container">
+  <div class="content-wrapper">
+      <div class="col-12">
+        <span class="d-flex justify-content-between">
+          <h1 class="navbar-brand head mb-3">Rencana Pembelajaran Semester (RPS)</h1>
+          <div>
+            <a href="/dosen/add-course" class="button100-form-btn btn-head">Tambah RPS</a>
+            <a href="" target="_blank" class="button100-form-btn btn-head">Revisi RPS</a>
           </div>
-        </div>
-        <% }) %>
+        </span>
       </div>
     </div>
+    <div class="row all-card">
+      <% items.forEach((item) => { %>
+      <div class="col-md-3 mb-3">
+        <div class="card text-center h-100">
+          <div class="card-body">
+            <img src="/images/frame.png" class="card-img-top" alt="..." />
+            <h4 class="card-title"><%= item.name %></h4>
+            <h6 class="card-subtitle text-muted flexible">Semester <%= item.semester %></h6>
+            <a href="/dosen/coursesPlan/<%= item.id %>" class="card-link">Lihat</a>
+            <a href="#" class="card-link">detail</a>
+          </div>
+        </div>
+      </div>
+      <% }) %>
+    </div>
+  </div>
 
   <%- include('../partials/footer'); -%>
-
+</div>
