--- a/public/css/style-dosen.css
+++ b/public/css/style-dosen.css
@@ -26,6 +26,9 @@
   margin-top: 40px;
 }
 
+div .all-card {
+  margin-top: 40px;
+}
 #logo-image {
   margin-left: 20px;
   margin-bottom: 2px;
@@ -51,11 +54,18 @@ nav .navbar-brand {
   font-weight: 700;
   font-size: 23px;
   margin-left: 20px;
-  color: #174464;
+  color: #747b75;
   display: inline-block;
+}
+div .navbar-brand:hover {
+  color: #747b75;
 }
 div .navbar {
   background-color: #fff;
+}
+li .nav-link {
+  font-weight: 600;
+  text-transform: uppercase;
 }
 .sidebar.close .logo-details .logo_name {
   transition-delay: 0s;
@@ -354,7 +364,7 @@ h4 {
 
 .tampil-rps {
   font-family: "lucida Sans Unicode", "Lucida Grande", "Segoe UI", vardana;
-  margin-top: 80px;
+  margin-top: 30px;
 }
 .rps-tabel {
   border-collapse: collapse;
@@ -465,6 +475,9 @@ tr {
   text-align: right;
 }
 
+.flexible {
+  flex-grow: 1;
+}
 .container-button100 {
   width: 100%;
   min-height: 100vh;
@@ -516,19 +529,27 @@ input {
 .input {
   justify-content: space-between;
 }
-.wrap-input100 {
+form .row {
+  --bs-gutter-x: 0;
+}
+div .wrap-input100 {
   position: relative;
   border-radius: 10px;
   font-family: "Poppins";
   line-height: 1.2;
   font-size: 10px;
-  height: 70px;
-  padding: 0 20px;
+  height: 80px;
+  padding: 10px 20px;
   background-color: #d5edff;
   border: 1px solid #ded2d9;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 50px;
+}
+.wrap-input100 h5 {
+  font-size: 0.9rem;
+  color: #747b75;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 h4 {
   font-family: "Poppins";
@@ -549,23 +570,20 @@ h4 {
   border-style: none;
   text-decoration: none;
   background-color: inherit;
+  width: -webkit-fill-available;
 }
 /*------------------------------------------------------------------
   [ Focus Input ]*/
 
 .focus-input100 {
-  position: absolute;
   display: block;
   width: calc(100% + 2px);
-  height: calc(100% + 2px);
-  top: -1px;
-  left: -1px;
+  font-size: 13px;
   pointer-events: none;
-  border: 1px solid #3f50e2;
   border-radius: 10px;
-
   visibility: hidden;
   opacity: 0;
+  margin-top: 30px;
 
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
@@ -658,20 +676,21 @@ button:hover {
   justify-content: center;
   align-items: center;
 }
-
+#form {
+}
 .button100-form-btn {
-  padding: 0 20px;
-  width: 15%;
-  height: 50px;
-  background-color: #3f50e2;
-  border-radius: 25px;
+  padding: 0 15px;
+  width: 13%;
+  height: 45px;
+  background-color: #55b8ff;
+  border-radius: 20px;
   text-align: center;
   display: flex;
+  font-weight: 600;
   justify-content: center;
   align-items: center;
   margin-left: 15px;
-  margin-top: 60px;
-  font-family: "Krona One";
+  font-family: "Poppins";
   font-size: 16px;
   color: #fff;
   line-height: 1.2;
@@ -702,9 +721,6 @@ button:hover {
   transition: all 0.4s;
 }
 
-.button100-form-btn:hover:before {
-  opacity: 1;
-}
 .input {
   margin-top: 0;
 }
@@ -784,31 +800,16 @@ th {
   justify-content: space-between;
 }
 
-.add1 {
-  gap: 8px;
-  text-decoration: none;
-  border: none;
-  color: #fff;
-  background: #55b8ff;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1;
-  padding: 10px 30px;
-}
-.add1 a {
+.button100-form-btn a {
   text-decoration: none;
   color: #fff;
 }
 
-.add1 a:hover {
+.button100-form-btn a:hover {
   text-decoration: none;
   color: #fff;
 }
-.add1 i {
-  margin-right: 0px;
-}
+
 .add {
   padding: 12px 30px;
   text-align: center;
@@ -847,4 +848,26 @@ button:hover {
 .thead {
   background: rgba(244, 247, 252, 0.75);
   backdrop-filter: blur(8px);
+}
+
+/*=================HEADER========================= */
+.content-wrapper {
+  background-color: #f0f0f0;
+  width: 100%;
+  height: 70px;
+  padding: 0 20px;
+  line-height: 70px;
+}
+.head {
+  line-height: 70px;
+}
+div .btn-head {
+  display: inline-flex;
+  text-align: center;
+  width: 140px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.btn-head:hover {
+  color: #fff;
 }
