--- a/views/dosen/cpmk.ejs
+++ b/views/dosen/cpmk.ejs
@@ -4,7 +4,7 @@
   <div class="">
     <h1 class="navbar-brand mb-3">Capaian Pembelajaran Mata Kuliah (CPMK)</h1>
     <div class="d-flex justify-content-end">
-      <button class="button100-form-btn">
+      <button class="button100-form-btn btn-head">
         <% items.forEach((item) => { %>
         <a href="/dosen/coursesPlan/<%= item.course_plan_id %>/add-cpmk" class=""><% }) %> TAMBAH </a>
       </button>
