--- a/views/dosen/add_cpmk.ejs
+++ b/views/dosen/add_cpmk.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/sidebar'); -%>
 
 <div id="container">
+  <h1 class="navbar-brand mb-5">Tambah Capaian Pembelajaran Mata Kuliah (CPMK)</h1>
   <div class="content">
     <form id="form" class="login100-form validate-form flex-sb flex-w" action="./add-cpmk" method="post">
       <div class="row input">
