--- a/frontend/css/detailrps.css
+++ b/frontend/css/detailrps.css
@@ -3,11 +3,11 @@
     width: 100%;
   }
   .rps {
-    background-color: #c6caf3;
+    background-image:url("../img/bar.png");
     height: 240px;
     padding: 40px 70px;
     border-radius: 10px;
-    box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
   }
   
   h3 {
@@ -136,4 +136,109 @@ tr {
     text-align: right;
 }
   
+
+button {
+    outline: none !important;
+    border: none;
+    background: transparent;
+  }
   
+  button:hover {
+    cursor: pointer;
+  }
+  .container-button100 {
+    width: 100%;
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+  
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  
+  .wrap-button100 {
+    width: 400px;
+    min-height: 500px;
+    position: relative;
+    padding: 30px;
+    background: #f5f5f5;
+    box-shadow: 7px 7px 41px rgba(0, 0, 0, 0.45);
+    border-radius: 14px;
+  }
+  
+  .button100-form {
+    width: 100%;
+  }
+  
+  .button100-form-title {
+    width: 80px;
+    margin: 0 auto;
+    display: block;
+  }
+.container-button100-form-btn {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.button100-form-btn {
+  padding: 0 20px;
+  width: 20%;
+  height: 50px;
+  background-color: #99ABFF;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+  margin-top: 60px;
+  font-family: "Krona One";
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  position: relative;
+  z-index: 1;
+}
+
+.button100-form-btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border-radius: 45px;
+  background-color: #A8B8FF;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.button100-form-btn:hover:before {
+  opacity: 1;
+}
