--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -19,8 +19,8 @@ body {
   left: 0;
   width: 100%;
   height: 60px;
-  background: #3f50e2;
-  box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.25);
+  background-image:url("../img/navbar.png");
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
   display: flex;
   align-items: center;
   z-index: 999;
