--- a/views/dosen/add_cpmk.ejs
+++ b/views/dosen/add_cpmk.ejs
@@ -26,7 +26,7 @@
 
       <div class="container-button100-form-btn m-t-30">
         <button class="button100-form-btn" type="submit" onclick="success1()">SIMPAN</button>
-        <button class="button100-form-btn"><a href="./CPMK" class="nav-link">KEMBALI</a></button>
+        <button class="button100-form-btn" type="button" onclick="page()">KEMBALI</button>
       </div>
     </form>
   </div>
@@ -40,6 +40,9 @@
         }, 700);
       })
       .catch((error) => console.log(error));
+  }
+  function page() {
+    window.location = "./CPMK";
   }
 </script>
 <%- include('../partials/footer'); -%>
