--- a/views/dosen/edit_cpmk.ejs
+++ b/views/dosen/edit_cpmk.ejs
@@ -27,7 +27,7 @@
 
       <div class="container-button100-form-btn m-t-30">
         <button class="button100-form-btn" type="submit" onclick="success2()">SIMPAN</button>
-        <button class="button100-form-btn"><a href="../CPMK" class="nav-link">KEMBALI</a></button>
+        <button class="button100-form-btn" type="button" type="button" onclick="page()">KEMBALI</button>
       </div>
     </form>
   </div>
@@ -41,6 +41,9 @@
         }, 700);
       })
       .catch((error) => console.log(error));
+  }
+  function page() {
+    window.location = "../CPMK";
   }
 </script>
 <%- include('../partials/footer'); -%>
