--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -89,7 +89,7 @@
                         </tr>
 
                         <tr>
-                            <td rowspan="12">Capaian Pembelajaran (CP) </td>
+                            <td rowspan="8">Capaian Pembelajaran (CP) </td>
                             <td colspan="3">CP Program Studi </td> 
                         </tr>
                         <tr>
@@ -116,68 +116,31 @@
                             <td colspan="6"><%= res.name  %> </td> 
                         </tr>
                         <% })}) %>
-                        <tr>
-                            <td>2 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>3 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>4 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>5 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>6 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>7 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-
+                        <% item.forEach((item) => { %>
                         <tr>
                             <td >Deskripsi Singkat Mata Kuliah </td>
-                            <td colspan="7">Mata kuliah pemrograman web merupakan mata kuliah yang membahas tentang teknik pengembangan website </td> 
+                            <td colspan="7"><%= item.description %></td> 
                         </tr>
-
+  
                         <tr>
                             <td >Materi Pembelajaran/Pokok Bahasan </td>
-                            <td colspan="7">Secara garis besar terdapat 2 materi yang akan </td> 
+                            <td colspan="7"><%= item.material %></td> 
                         </tr>
 
                         <tr>
-                            <td rowspan="7">Pustaka </td>
-                            <td colspan="2">Utama: </td> 
+                            <td colspan="10">Pustaka </td>
                         </tr>
+                        <% }) %>
+                        <% item.forEach((data) => { 
+                            data.course_plan_references.forEach((res) => { var no = 0  %>
                         <tr>
-                            <td>1 </td> 
-                            <td colspan="6">Matt Doyle, 2009 </td> 
+                            <td rowspan="1" class="border-bottom-0"></td>
+                            <td><%= res.id  %> </td> 
+                            <td colspan="6"><%= res.author  %>, <%= res.year  %>, "<%= res.title  %>", <%= res.publisher  %></td> 
                         </tr>
-                        <tr>
-                            <td>2 </td> 
-                            <td colspan="6">Nicholas Zakas, 2012</td> 
-                        </tr>
-                        <tr>  
-                            <td colspan="2">Pendukung: </td> 
-                        </tr>
-                        <tr>
-                            <td>3 </td> 
-                            <td colspan="6">Mark Pilgrim, 2010 </td> 
-                        </tr>
-                        <tr>
-                            <td>4 </td> 
-                            <td colspan="6">Steve Fulton, Jeff Fulton, 2011 </td> 
-                        </tr>
-                        <tr>
-                            <td>5 </td> 
-                            <td colspan="6">S. Stefanor , 2010 </td> 
-                        </tr>
+                        <% })}) %>
+
+
 
                         <tr>
                             <td rowspan="8">Media Pembelajaran </td>
@@ -217,25 +180,22 @@
                             <td>Team Teaching </td>
                             <td colspan="7">- </td> 
                         </tr>
-
                         <tr>
-                            <td>Assessment </td>
-                            <td colspan="7">Project, Tugas, Quiz, UTS, UAS </td> 
+                            <td colspan="10">Assessment </td>
+                        </tr>
+                        <% item.forEach((data) => { 
+                            data.course_plan_assessments.forEach((res) => { var no = 0  %>
+                        <tr>
+                            <td rowspan="1" class="border-hidden"></td>
+                            <td colspan="7" rowspan=""><%= res.name  %>    : <%= res.percentage  %></td> 
+                            <% })}) %>
+
                         </tr>
 
                         <tr>
                             <td rowspan="3">Mata Kuliah Syarat </td>
-                            <td>1 </td>
-                            <td colspan="6">SDA </td> 
                         </tr>
-                        <tr>
-                            <td>2 </td>
-                            <td colspan="6">DASPRO </td> 
-                        </tr>
-                        <tr>
-                            <td>3 </td>
-                            <td colspan="6">PBO </td> 
-                        </tr>  
+ 
                     </tbody>
                 </table>
             </div>
